Actualizo videos de youtube con diseño responsive (mobile)

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -36,12 +36,38 @@
     <section> <!--comienzo de seccion + titulo de la seccion-->
     <h2 class="tituloSeccion">Elegí lo que se adatpe mas a vos</h2>
     <p>Aqui podes encontrar todos los eventos disponibles mes a mes</p>
-        <!--lista de eventos disponibles-->
-        <ul><li><a href="#">TORNEO DE TRUCO</a></li>
-        <li><a href="#">PARTIDOS DE FUTBOL</a></li>
-        <li><a href="#">TORNEOS DE PING PONG</a></li>
-        <li><a href="#">FESTEJOS</a></li></ul>
-     <!--Articulo de evento destacado-->
+        <!-- Contenedor para hacer el video responsive -->
+<div class="videoContainer">
+  <iframe 
+    src="https://www.youtube.com/embed/B0wcl1aGQFg?si=q0TJCcG3-5VIHqUG"
+    title="Video torneo Bocanada"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+</div>
+
+<div class="videoContainer">
+  <iframe 
+    src="https://www.youtube.com/embed/HTn9oh_WMWc?si=pbwEOiUqGIEM7njy"
+    title="Video torneo Bocanada 2"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+</div>
+<div class="videoContainer">
+  <iframe src="https://www.youtube.com/watch?v=VZryx_xS1EA"
+  title="video torneo bocanada 3"
+   frameborder="0"
+   allowfullscreen>
+ </iframe>
+</div>
+
+<div class="videoContainer">
+  <iframe src="https://www.youtube.com/watch?v=uzR0l-jHNos"
+  title="video festejo bocanada 1"
+  frameborder="0"
+  allowfullscreen></iframe>
+</div>
       <article><p><span class="destacado">ÉSTA SEMANA HAY TORNEO</span>, SUMATE!!!</p></article>
     </section>
         <section>
