--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bocanada club social</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -15,19 +16,41 @@
         <img class="logoLetras" src="../images/Imagen pecho remera amarillo PNG.png" alt="bocannada club social imagen">
 
         
-        <nav class="navegadores"> 
-            <ul class="enlaces"> <!--lista con enlaces relativos, navegan dentro del sitio-->
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./eventos.html">Eventos</a></li>
-                <li><a href="./talleres.html">Talleres</a></li>
-                <li><a href="./encontranos.html">Encontranos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav></div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="../index.html">Bocanada</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./eventos.html">Eventos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./talleres.html">Talleres</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./encontranos.html">Encontranos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contacto.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
         
-    <main>
+  
         <h1 class="tituloPrincipal"> <em> Contacto</em></h1>
     </header>
+      <main>
         <section><!-- titulo de la seccion-->
             <h2 class="tituloSeccion">Si deseas contactarte con nosotros dejanos tus datos y nos comunicaremos a la brevedad</h2>
            <!--Formulario-->
@@ -75,5 +98,6 @@
     <a href="mailto:info@bocanada.com.ar" target="_blank">info@bocannada.com.ar</a>
   </footer>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
