ultimas modificaciones con responsive y bootstrap

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bocanada club social</title>
+    <title>Bocannada club social</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,7 +73,11 @@
             <button type="submit">Enviar Mensaje</button>
             </form>
       <div class="parrafoContacto">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis incidunt accusamus laudantium assumenda sunt ipsam? Natus deleniti repellat minima corrupti nisi sapiente hic ut laboriosam ratione, nostrum saepe ad maxime. Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi odit, amet aliquam asperiores maxime blanditiis et soluta excepturi tenetur distinctio facere beatae iusto laudantium commodi magni, vero veritatis? Et, temporibus?
+            <p>¿Querés sumarte a nuestras actividades, tenés una propuesta o simplemente querés saludarnos?
+Completá el formulario y nos pondremos en contacto a la brevedad.
+En Bocannada valoramos cada mensaje: escucharte es parte de construir comunidad.
+También podés escribirnos directamente a
+👉 info@bocannada.com.ar
             </p>
         </div>
         </section>
