--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -56,10 +56,15 @@
 </header>
     <main>
     <section>
-       <h2>Estamos aqui!</h2>
+      
+       <h2 class="estamosAqui">Estamos aqui!</h2>
+       <div class="mapaTexto">
+        
        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.2765681624455!2d-58.414784499999996!3d-34.6224506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb4ee3c8ef91%3A0x290fb6e728117519!2sLA%20MAZA%20Teatro!5e0!3m2!1ses-419!2sar!4v1743808448260!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-    <p>Estamos ubicados en el corazon de boedo, te esperamos con las puertas abiertas</p>
+       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In vero beatae maiores repellat praesentium, dolor dolorem vel quibusdam labore accusamus ratione, at aperiam quis, ad aspernatur delectus iure ea quasi.</p>
+</div>
+<div class="textoBoedo">
+    <p >Estamos ubicados en el corazon de boedo, te esperamos con las puertas abiertas</p></div>
     </section>
 </main>
 <!--pie de pagina con la fecha y redes sociales-->
