--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bocanada club social</title> 
+    <title>Bocannada club social</title> 
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
      <!--banner prncipal al lado del logo-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">Bocanada</a>
+    <a class="navbar-brand" href="../index.html">Bocannada</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -75,11 +75,37 @@
       <h3>Teatro</h3>
     </div>
   </div>
-  <div class="banner">
-    
-     
-    </div>
+<a href="mailto:info@bocannada.com.ar?subject=Talleres%20Bocanada" class="bannerLink" title="Inscribite por mail">
+  <div class="bannerFull"></div>
+</a>
+  
+</div>
   </div>
 </div>
 
 </section> 
+ 
+       <!--pie de pagina con la fecha y redes sociales-->
+<footer>
+    <h4>Seguinos en:</h4>
+    <!--iconos de redes sociales-->
+    <div class="redesSociales">
+      <a href="https://www.instagram.com/mauriciobalparda/">
+        <img class="iconoRedSocial" src="../images/instagram.png" alt="icono Instagram">
+      </a>
+      <a href="https://www.facebook.com/mbalparda1">
+        <img class="iconoRedSocial" src="../images/facebook.png" alt="icono Facebook">
+      </a>
+      <a href="https://x.com/MAURICI04466106">
+        <img class="iconoRedSocial" src="../images/x.avif" alt="icono X">
+      </a>
+    </div>
+    <p>Año 2025, Buenos Aires, Argentina</p>
+    <a href="mailto:info@bocanada.com.ar" target="_blank">info@bocannada.com.ar</a>
+  </footer>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+  
+</body>
