se agregan animaciones y sass

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -88,9 +88,9 @@
 
 
 
-<section>
+<section class="galeriaImagenes">
 
-  <h2 class="tituloGaleriaImagenes">Galeria de imagenes</h2>
+  <h2 class="tituloSubseccion">Galeria de imagenes</h2>
 
   <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
