agrando letra nav, corrijo negrita de parrafoQuienes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--links de navegacion-->
        <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="./index.html">Bocannada</a>
+    <a class="navbar-brand" href="./index.html"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@ Creamos un espacio barrial para compartir talleres, arte, charlas y momentos que
 Acá no hace falta saber a qué venís: solo tener ganas de formar parte.
 Te invitamos a bajar un cambio, conectar y sentirte parte de algo más grande.
 En Bocannada, el encuentro es medicina.
-Además de ser un espacio de encuentro, Bocanada es un proyecto colectivo que crece con las ideas y la energía de quienes lo habitan. Organizamos eventos culturales, ferias, ciclos de cine, juegos, rondas y talleres abiertos, donde cada voz cuenta. Apostamos al trabajo en red, al apoyo mutuo y a la construcción de una comunidad donde cuidarnos sea parte de la rutina.
+Además de ser un espacio de encuentro, Bocannada es un proyecto colectivo que crece con las ideas y la energía de quienes lo habitan. Organizamos eventos culturales, ferias, ciclos de cine, juegos, rondas y talleres abiertos, donde cada voz cuenta. Apostamos al trabajo en red, al apoyo mutuo y a la construcción de una comunidad donde cuidarnos sea parte de la rutina.
 
   </div>
   <div class="imagen1"></div>
