corrijo h1 y parrafo en el footer

--- a/pages/encontranos.html
+++ b/pages/encontranos.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bocanada club social</title>
-    <link rel="stylesheet" href="../css/styles.css">
+       <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+   <!--Css-->
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
   
@@ -56,7 +59,7 @@
 </header>
     <main>
     <section class="seccionEncontranos">
-      
+      <h1 class="tituloPrincipal">ENCONTRANOS</h1>
        <h2 class="estamosAqui">Estamos aqui!</h2>
        <div class="mapaTexto">
         
@@ -103,7 +106,7 @@ H
         <img class="iconoRedSocial" src="../images/x.avif" alt="icono X">
       </a>
     </div>
-    <p>Año 2025, Buenos Aires, Argentina</p>
+    <p class="parrafoFooter">Año 2025, Buenos Aires, Argentina</p>
     <a href="mailto:info@bocanada.com.ar" target="_blank">info@bocannada.com.ar</a>
   </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
