--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <!--Css-->
     <link rel="stylesheet" href="./css/styles.css">
     
-  <!-- Bootstrap 5 CSS -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
 
-    <!--Fuente del sitio-->
+    <!--Fuente-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -117,7 +117,7 @@ En definitiva, nuestra misión es ser esa Bocanada de aire fresco que necesitás
       </a>
     </div>
     <div class="infoBocannada">
-    <p>Año 2025, Buenos Aires, Argentina</p>
+    <p class="parrafoFooter">Año 2025, Buenos Aires, Argentina</p>
     <a href="mailto:info@bocannada.com.ar" target="_blank">info@bocannada.com.ar</a>
   </div>
  
