--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bocannada club social</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--fon-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!--css-->
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
+<body>sass
     <header><div class="headerTop">
         <img class="logo" src="../images/Imagen vertical para remera PNG.png" alt="logo de bocanada" height="10%" width="10%">
         <img class="logoLetras" src="../images/Imagen pecho remera amarillo PNG.png" alt="bocannada club social imagen">
@@ -99,7 +102,7 @@ También podés escribirnos directamente a
         <img class="iconoRedSocial" src="../images/x.avif" alt="icono X">
       </a>
     </div>
-    <p>Año 2025, Buenos Aires, Argentina</p>
+    <p class="parrafoFooter">Año 2025, Buenos Aires, Argentina</p>
     <a href="mailto:info@bocanada.com.ar" target="_blank">info@bocannada.com.ar</a>
   </footer>
    
