--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bocanada club social</title>
-    <link rel="stylesheet" href="../css/styles.css">
+  <!--Fuente-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--Css-->
+    <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 <body>
@@ -56,6 +58,7 @@
 </div>
     </header>
     <main>
+      <h1 class="tituloPrincipal">EVENTOS</h1>
       <!--Comienzo de seccion-->
   <section class="seccionEvento"> 
   <article class="articuloEvento">
@@ -152,7 +155,7 @@
       </a>
     </div>
     <div class="infoBocannada">
-    <p>Año 2025, Buenos Aires, Argentina</p>
+    <p class="parrafoFooter">Año 2025, Buenos Aires, Argentina</p>
     <a href="mailto:info@bocannada.com.ar" target="_blank">info@bocannada.com.ar</a>
   </div>
   </footer>
