--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -18,8 +18,8 @@
     <header>
       <!--Logo margen superior izq -->
         <div class="headerTop">
-        <img class="logo" src="../images/Imagen vertical para remera PNG.png" alt="logo de bocanada" height="10%" width="10%">
-        <img class="logoLetras" src="../images/Imagen pecho remera amarillo PNG.png" alt="bocannada club social imagen">
+        <img class="logo" src="../images/Imagen vertical para remera PNG.png" alt="logo de bocannada" height="10%" width="10%">
+        <img class="logoLetras" src="../images/Imagen pecho remera amarillo PNG.png" alt="logo en letras de bocannada">
        <!--banner prncipal al lado del logo-->
         
        
@@ -81,10 +81,10 @@
       <iframe src="https://www.youtube.com/embed/HTn9oh_WMWc" title="Video torneo 2" allowfullscreen></iframe>
     </div>
     <div class="videoItem">
-      <iframe src="https://www.youtube.com/embed/AQUI_TU_VIDEO_ID3" title="Video torneo 3" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/us6HYdU1He4?si=ss0G07SW0vGU1hpv&amp;start=6" allowfullscreen></iframe>
     </div>
     <div class="videoItem">
-      <iframe src="https://www.youtube.com/embed/AQUI_TU_VIDEO_ID4" title="Video torneo 4" allowfullscreen></iframe>
+    <iframe  src="https://www.youtube.com/embed/XcK35ikbKGk?si=gr0nWkzl44l2bVTd&amp;start=4" allowfullscreen></iframe>
     </div>
   </div>
 </section>
@@ -111,19 +111,19 @@
       <img src="../images/foto-futbol2.jpg" class="d-block w-100" alt="foto-futbol-2">
     </div>
     <div class="carousel-item">
-      <img src="../images/juegoAjedrez.jpg" class="d-block w-100" alt="foto-evento">
+      <img src="../images/juegoAjedrez.jpg" class="d-block w-100" alt="foto-evento-ajedrez">
     </div>
 <div class="carousel-item">
-  <img src="../images/juegoUno.jpg"  class="d-block w-100" alt="foto-evento2">
+  <img src="../images/juegoUno.jpg"  class="d-block w-100" alt="foto-evento-juegos-mesa">
 </div>
 <div class="carousel-item">
-  <img src="../images/juegoPool.jpg"  class="d-block w-100" alt="foto-evento3">
+  <img src="../images/juegoPool.jpg"  class="d-block w-100" alt="foto-evento-pool">
 </div>
 <div class="carousel-item">
-  <img src="../images/foto-ping-pong-1.jpg"  class="d-block w-100" alt="foto-ping-pong">
+  <img src="../images/foto-ping-pong-1.jpg"  class="d-block w-100" alt="foto-evento-ping-pong">
 </div>
 <div class="carousel-item">
-  <img src="../images/foto-ping-pong-2.jpg"   class="d-block w-100" alt="foto-ping-pong2">
+  <img src="../images/foto-ping-pong-2.jpg"   class="d-block w-100" alt="foto-evento-ping-pong2">
 </div>   
   </div>
   </div>
