--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -16,8 +16,8 @@
 <body>
     <header>    <!--Logo margen superior izq -->
       <div class="headerTop">
-      <img class="logo" src="../images/Imagen vertical para remera PNG.png" alt="logo de bocanada" height="10%" width="10%">
-      <img class="logoLetras" src="../images/Imagen pecho remera amarillo PNG.png" alt="bocannada club social imagen">
+      <img class="logo" src="../images/Imagen vertical para remera PNG.png" alt="logo de bocannada" height="10%" width="10%">
+      <img class="logoLetras" src="../images/Imagen pecho remera amarillo PNG.png" alt="logo en letras de bocannada">
      <!--banner prncipal al lado del logo-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
