ultimos cambios con SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Seo-->
+    <meta name="description" content="Sitio web destinado a crear comunidad de valor, aprendizaje practico y un encuentro entre amigxs">
+    <meta name="keywords" content="comunidad, talleres, aprendizaje, club social, bocannada, medicina, encuentro, barrio">
   <!--titulo de la pestaña-->
     <title>Bocannada club social</title>
     
