--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Seo-->
+     <meta name="description" content="Sitio web destinado a crear comunidad de valor, aprendizaje practico y un encuentro entre amigxs">
+    <meta name="keywords" content="comunidad, talleres, aprendizaje, club social, bocannada, medicina, encuentro, barrio, galeria de videos, galeria de imagenes">
     <title>Bocanada club social</title>
   <!--Fuente-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +71,7 @@
     </p>
   </article>
 </section>
-  <!-- Contenedor para hacer el video responsive -->
+
 
 <section class="galeriaVideos">
   <h3 class="tituloSubseccion">Galeria de videos</h3>
