--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!--Seo-->
+     <meta name="description" content="Sitio web destinado a crear comunidad de valor, aprendizaje practico y un encuentro entre amigxs">
+    <meta name="keywords" content="comunidad, talleres, aprendizaje, club social, bocannada, medicina, encuentro, barrio">
+
     <title>Bocannada club social</title>
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!--fon-->
+    <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <!--css-->
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>sass
+<body>
     <header><div class="headerTop">
         <img class="logo" src="../images/Imagen vertical para remera PNG.png" alt="logo de bocanada" height="10%" width="10%">
         <img class="logoLetras" src="../images/Imagen pecho remera amarillo PNG.png" alt="bocannada club social imagen">
