--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Seo-->
+     <meta name="description" content="Sitio web destinado a crear comunidad de valor, aprendizaje practico y un encuentro entre amigxs">
+    <meta name="keywords" content="comunidad, talleres, aprendizaje, club social, bocannada, medicina, encuentro, barrio">
     <title>Bocannada club social</title> 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
